--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <div class="d-flex justify-content-center mb-2">
           <%= render "searches/form" %>
         </div>
-
+        <!--指定場所にsearchboxがある-->
         <%= yield %>
 
       </main>
